# cmake_basic_training_examples

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
hello_world/: CMakeLists.txt
hello_world/apps/: CMakeLists.txt  main.cpp
hello_world/include/libhello/: hello_world.hpp
hello_world/src/: CMakeLists.txt  hello_world.cpp
hello_world/tests/: CMakeLists.txt  hello_world_test.cpp
hello_world_simple/: CMakeLists.txt  hello_world.cpp  main.cpp
